--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<meta name="viewport" content=
 		"width=device-width, initial-scale=1.0">
 	<title>Dice Game</title>
+	 <link rel="icon" href="favicon.ico">
   <link rel="stylesheet" href="style.css">
 </head>
 
